prod/sock-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"name":"front-end"},"name":"front-end","namespace":"sock-shop"},"spec":{"ports":[{"nodePort":30001,"port":80,"targetPort":8079}],"selector":{"name":"front-end"},"type":"NodePort"}}
  creationTimestamp: "2020-07-19T16:47:35Z"
  labels:
    name: front-end
  name: front-end
  namespace: sock-shop
  resourceVersion: "70700"
  selfLink: /api/v1/namespaces/sock-shop/services/front-end
  uid: 8bf8d199-c9df-11ea-a5d6-42010aa60065
spec:
  clusterIP: 10.63.243.172
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 8079
  selector:
    name: front-end
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
